apps/base/wiki-js/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: wiki-js-postgres-db
  namespace: wiki
  labels:
    app: wiki-js
    component: postgressql
spec:
  selector:
    app: wiki-js
    component: postgressql-db
  type: NodePort
  ports:
    - name: pgql
      port: 5432
      protocol: TCP
      targetPort: 5432
      nodePort: 30009
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: wiki-js-postgressql-db
  namespace: wiki
  labels:
    app: wiki-js
    component: postgressql
spec:
  serviceName: wiki-js-postgressql-db-service
  replicas: 1
  selector:
    matchLabels:
      app: wiki-js
      component: postgressql-db
  template:
    metadata:
      labels:
        app: wiki-js
        component: postgressql-db
    spec:
      containers:
        - name: nextcloud-postgressql-db
          image: postgres:14.5
          ports:
            - containerPort: 5432
          resources:
            requests:
              cpu: 10m
              memory: 50Mi
            limits:
              cpu: 150m
              memory: 500Mi
          volumeMounts:
            - name: wiki-js-data
              mountPath: /var/lib/postgresql/data
              subPath: pgdata
      terminationGracePeriodSeconds: 60
      volumes:
        - name: wiki-js-data
          persistentVolumeClaim:
            claimName: wiki-js-pvc
